# vestlus

./: LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
chat/: __init__.py  api.py  apps.py  urls.py
chat/admin/: __init__.py  channel.py  membership.py  message.py
chat/admin/actions/: __init__.py
chat/fixtures/: __init__.py
chat/forms/: __init__.py  membership.py  message.py
chat/leh_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chat/middleware/: __init__.py
chat/models/: __init__.py  channel.py  membership.py  message.py
chat/serializers/: __init__.py  channel.py  message.py
chat/templates/: __init__.py  channel_detail.html  channel_list.html  membership_detail.html  membership_list.html  message_detail.html  message_list.html
chat/templatetags/: __init__.py
chat/views/: __init__.py  channel_detail.py  channel_list.py  membership_detail.py  membership_list.py  message_detail.py  message_list.py  routes.py
chat/viewsets/: __init__.py  channel.py  membership.py  message.py
vestlus/: __init__.py  api.py  apps.py  requires.py  settings.py  urls.py
vestlus/admin/: __init__.py  channel.py  membership.py  message.py
vestlus/fixtures/: __init__.py  vestlus-channels.json
vestlus/forms/: __init__.py  channel.py  message.py
vestlus/middleware/: __init__.py
vestlus/migrations/: 0001_initial.py  0002_auto_20200701_0012.py  0003_channel_photo.py
vestlus/models/: __init__.py  channel.py  membership.py  message.py
vestlus/search_indexes/: __init__.py  channel.py  message.py
vestlus/serializers/: __init__.py  channel.py  membership.py  message.py
vestlus/templates/: __init__.py  channel_create.html  channel_delete.html  channel_detail.html  channel_list.html  index.html  membership_create.html  membership_detail.html  membership_list.html  message_create.html  message_delete.html  message_detail.html  message_list.html  vestlus.html  vue-templates.html
vestlus/views/: __init__.py  channel_create.py  channel_delete.py  channel_detail.py  channel_list.py  index.py  membership_create.py  membership_detail.py  membership_list.py  message_create.py  message_delete.py  message_detail.py  message_list.py  routes.py
vestlus/viewsets/: __init__.py  channel.py  membership.py  message.py  router.py
(+58 files in other folders)
