[metadata]
name = django-vestlus
version = 0.1
long_description = file: README.md
long_description_content_type = text/markdown
description = A Django app for chat conversations.
url = https://www.github.com/lehvitus/vestlus
author = Leo Neto
author_email = leo@ekletik.com
license = BSD-3-Clause
keywords = django chat messages
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >= 3.4
install_requires =
    django>=2.2
    django-polymorphic==2.1.2
    django-crispy-forms>=1.9.1
    django-haystack>=2.8.1
    djangorestframework>=3.7.7
